<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/login_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/login_text1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/primary"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/login_text2"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:text="@string/login_text3"
        android:textSize="14sp"
        android:textColor="@color/primary"/>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:backgroundTint="@color/primary"
        android:text="@string/submit"
        android:textColor="@color/secondary"
        android:textSize="16sp"/>

</LinearLayout>