<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="#429D00"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="#FBF4D1"
                android:contentDescription="@string/developer"
                android:src="@drawable/develop" />

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="#429D00"
                android:contentDescription="@string/tutorial"
                android:src="@drawable/tutorial" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu1"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu2"/>

        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_margin="70dp"
        android:src="@drawable/input" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/primary"
            android:text="@string/camera"
            android:textColor="@color/secondary"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnChoosePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/primary"
            android:text="@string/gallery"
            android:textColor="@color/secondary"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>