<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tutorial_background"
    android:orientation="vertical"
    tools:context=".tutorial">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/howTo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/tut_1"
            android:contentDescription="ini gambar"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tut_1"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_tut1"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/tut_2"
            android:contentDescription="ini gambar"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tut_1"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_tut1"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/tut_3"
            android:contentDescription="ini gambar"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tut_1"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_tut1"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/next"
        android:layout_margin="20dp"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/primary"/>

</LinearLayout>